--- a/_pages/ActiveLearningDynamics.html
+++ b/_pages/ActiveLearningDynamics.html
@@ -45,8 +45,8 @@ figcaption {
 
 <p class="title">Active Learning of Quadrotor Discrete Dynamics for Uncertainty-Aware Model Predictive Control</p>
 
-<p class="aligncenter"><a href="https://alessandrosaviolo.github.io/">Alessandro Saviolo</a>, 
-  <a href="https://lguanrui.github.io/">Guanrui Li</a>, 
+<p class="aligncenter"><a href="https://alessandrosaviolo.github.io/">Alessandro Saviolo</a>, <a href="https://github.com/FreyJo/">Jonathan Frey</a>, 
+  <a href="https://github.com/amrathod/">Abhishek Rathod</a>, <a href="https://scholar.google.com/citations?user=JEwMX6wAAAAJ&hl=en/">Moritz Diehl</a>, 
   <a href="https://scholar.google.it/citations?user=W8f0d6oAAAAJ&hl=en">Giuseppe Loianno</a></p>
 
 <figure>
